# rust-mandelbrot-set-explorer

./: .gitattributes  IMPLEMENTATION_REPORT.md  README.md  REPORT.md  assignment1-notes.md
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.js  main.ts  style.css  wasm-module.d.ts
frontend/src/components/: Controls.tsx  Footer.tsx  FractalViewer.tsx  GreetingDemo.tsx  Header.tsx  TechStack.tsx  WasmCounter.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/hooks/: useWasm.ts
frontend/src/types/: wasm-module.d.ts
wasm-module/: .gitignore  Cargo.toml
wasm-module/src/: lib.rs
