[package]
name = "wasm-module"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "WebAssembly module for Mandelbrot set visualization"
repository = "https://github.com/yourusername/wasm-mandelbrot"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
num-complex = "0.4"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "ImageData",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1